@@ -4367,7 +4367,7 @@ Attribute gibt es deswegen wie bei \tty{DC} auch hier nicht.
 {\em\begin{tabbing}
 G"ultigkeit: \= Intel, Zilog, Toshiba, NEC, TMS370, Siemens, AMD, M16(C),\\
              \> MELPS7700/65816, National, ST9, TMS7000, $\mu$PD77230, \\
-             \> Fairchild, Intersil, XS1
+             \> Signetics, Fairchild, Intersil, XS1
 \end{tabbing}}
 
 Diese Befehle stellen sozusagen das Intel-Gegenst"uck zu \tty{DS}
