@@ -191,6 +191,13 @@ WORD \\
 LIV        \> RIV         \\   
 \end{tabbing}}
 
+\subsubsection{Signetics 2650}
+{\tt\begin{tabbing}
+\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
+DB         \> DD          \> DQ          \> DS          \> DT \\
+DW         \\
+\end{tabbing}}
+
 \subsubsection{Philips XA}
 {\tt\begin{tabbing}
 \hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\hspace{3cm}\=\kill
