@@ -4240,7 +4240,7 @@ attributes therefore do not exist just as in the case of \tty{DC}.
 {\em\begin{tabbing}
 valid for: \= Intel, Zilog, Toshiba, NEC, TMS370, Siemens, AMD, \\
            \> MELPS7700/65816, M16(C), National, ST9, TMS70Cxx, \\
-           \> $\mu$PD77230, Fairchild, Intersil, XS1
+           \> Signetics, $\mu$PD77230, Fairchild, Intersil, XS1
 \end{tabbing}}
 
 These commands are - one could say - the Intel counterpart to \tty{DS} and
