@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.59 2012-12-09 12:32:06 alfred Exp $                     */
+/* $Id: version.c,v 1.60 2012-12-31 11:21:29 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.60  2012-12-31 11:21:29  alfred
+ * - add Dx pseudo instructions to 2650 target
+ *
  * Revision 1.59  2012-12-09 12:32:06  alfred
  * - Bld85
  *
@@ -257,8 +260,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 85]";
-char *DebVersion = "1.42bld85-1";
+char *Version="1.42 Beta [Bld 86]";
+char *DebVersion = "1.42bld86-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2012 Alfred Arnold";
