@@ -1,4 +1,4 @@
-$Id: changelog,v 1.72 2012-12-09 12:32:06 alfred Exp $
+$Id: changelog,v 1.73 2012-12-31 11:21:29 alfred Exp $
 ------------------------------------------------------------------------------
 v1.41r3 Aenderungen: (-->v1.41r4beta)
 
@@ -1246,3 +1246,7 @@ v1.41r8 Aenderungen: (-->v1.42beta)
 2012-12-09 [Bld85]
 
 - Change      : allow register symbols for Zilog Z8
+
+2012-12-31 [Bld86]
+
+- Change      : add Dx pseudo instructions to Signetics 2650
